--- a/JS-Advanced/07. Unit Testing and Error handling - Exercise/06.Dynamic-Validation/validation.html
+++ b/JS-Advanced/07. Unit Testing and Error handling - Exercise/06.Dynamic-Validation/validation.html
@@ -14,7 +14,7 @@
 
 <body onload="validate()">
     <label for="email">Enter email:</label>
-    <input id="email" type="text" />
+    <input onchange="validate()" id="email" type="text" />
 </body>
 
 </html>
