--- a/JS-Applications/01. Asynchronous Programming/03.Forecaster/index.html
+++ b/JS-Applications/01. Asynchronous Programming/03.Forecaster/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <div id="request">
             <input id="location" class='bl' type="text">
-            <input id="submit" class="bl" type="button" value="Get Weather">
+            <input onclick="attachEvents()" id="submit" class="bl" type="button" value="Get Weather">
         </div>
         <div id="forecast" style="display:none">
             <div id="current">
